Fix T38171: Vertical tabs don't respond to clicks on the left most pixels